--- a/AutoDisable/izy.AutoDisable.asmdef
+++ b/AutoDisable/izy.AutoDisable.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "izy.AutoDisable",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
